--- a/brands/welton_london.html
+++ b/brands/welton_london.html
@@ -47,22 +47,21 @@
                 <div class="discription">
                   <h4>WELTON LONDON L'AMOUR ABSOLU EXTRAIT DE PARFUM</h4>
                   <p>
-                    Ця інтенсивно витончена східна суміш займає перше місце в
-                    солодких нотах. Елегантне поєднання пряної кориці, чарівної
+                    Ця витончена східна суміш займає перше місце серед
+                    солодких нот. Елегантне поєднання пряної кориці, чарівної
                     кави та соковитої сливи розкриває чуттєві ноти Kashmir
-                    Fusion - поєднання мускусних і амбрових тонів - посилених
+                    Fusion. Поєднання мускусних і амбрових тонів - посилених
                     нотами Oak Fusion - яскравими ванільними нотами, створеними
-                    з насиченою деревиною дуба - та крапкою рому. Цей коктейль
+                    з насиченою деревиною дуба та крапкою рому. Цей коктейль
                     розташовується на оксамитовому сандаловому дереві, чуттєвому
                     мускусі, що змішується з бобами тонка, амброю та відтінком
                     ванілі, створюючи захоплюючий шлейф.
                   </p>
                   <p>Парфумер: Джон-Пол Велтон.</p>
-                  <p>Верхня нота: кориця – слива – кава</p>
-                  <p>Середні ноти: кашмірський ф’южн – дубовий ф’южн – ром</p>
+                  <p>Верхня нота: Кориця, Слива , Кава</p>
+                  <p>Середні ноти: Кашмірський ф’южн , Дубовий ф’южн , Ром</p>
                   <p>
-                    Базові ноти: сандалове дерево – мускус – боби тонка – амбра
-                    – ваніль
+                    Базові ноти: Сандалове дерево, Мускус , Боби Тонка, Амбра, Ваніль
                   </p>
                 </div>
               </div>
@@ -82,7 +81,7 @@
                 <div class="discription">
                   <h4>WELTON LONDON LUCKY CHARM EXTRAIT DE PARFUM</h4>
                   <p>
-                    Смачний східний, суміш деревного бурштину, Lucky Charm
+                    Смачний та східний, суміш деревного бурштину, Lucky Charm
                     створять навколо вас казковий ореол! Нота свіжого елемі
                     змішується з чуттєвою вібрацією кардамону та деревними
                     тонами олібануму. Аромат розкриває елегантну східну глибину,
@@ -92,12 +91,11 @@
                     лабданум і молочний сандал.
                   </p>
                   <p>Парфумер: Джон-Пол Велтон.</p>
-                  <p>Верхня нота: Елемі – Кардамон – Олібанум</p>
+                  <p>Верхня нота: Елемі, Кардамон, Олібанум</p>
                   <p>
-                    Середні ноти: Тютюн для кальяну – Мускатний горіх –
-                    Кашмірський ф’южн
+                    Середні ноти: Тютюн для кальяну, Мускатний горіх, Кашмірський ф’южн
                   </p>
-                  <p>Базові ноти: Кедр – Лабданум – Сандал</p>
+                  <p>Базові ноти: Кедр, Лабданум, Сандал</p>
                 </div>
               </div>
             </div>
@@ -126,9 +124,9 @@
                     ароматом мускусу для теплого шлейфу.
                   </p>
                   <p>Парфумер: Джон-Пол Велтон.</p>
-                  <p>Верхня нота: Рожевий Перець – Давана – Кардамон</p>
-                  <p>Середні ноти: Троянда – Шафран – Шкіра</p>
-                  <p>Базові ноти: Пачулі – Кашмірський Ф’южн – Мускус</p>
+                  <p>Верхня нота: Рожевий Перець, Давана, Кардамон</p>
+                  <p>Середні ноти: Троянда, Шафран, Шкіра</p>
+                  <p>Базові ноти: Пачулі, Кашмірський Ф’южн, Мускус</p>
                 </div>
               </div>
             </div>
@@ -149,18 +147,17 @@
                   <p>
                     Яскраві цитрусові верхні ноти лимона та бергамоту в
                     поєднанні з вібрацією кардамону розкривають незрівнянну
-                    зелену квітковість жасмину Самбак у серці, що змішується з
+                    зелену квітковість жасміну Самбак у серці, що змішується з
                     ароматною свіжістю м'яти та зеленого чаю. Шкіряна теплота
                     нот цистусу з сандалом, бобами тонка та мускусом відтворює
                     пишність цього швидкоплинного моменту.
                   </p>
                   <p>Парфумер: Джон-Пол Велтон.</p>
-                  <p>Верхня нота: Лимон – Кардамон – Бергамот</p>
+                  <p>Верхня нота: Лимон, Кардамон, Бергамот</p>
                   <p>
-                    Середні ноти: Жасмин Самбак – Листя М’яти – Зелений Чай –
-                    Цистус
+                    Середні ноти: Жасмин Самбак, Листя М’яти, Зелений Чай, Цистус
                   </p>
-                  <p>Базові ноти: Сандал – Пачулі – Боби Тонка – Мускус</p>
+                  <p>Базові ноти: Сандал, Пачулі, Боби Тонка, Мускус</p>
                 </div>
               </div>
             </div>
@@ -189,9 +186,9 @@
                     парфуму.
                   </p>
                   <p>Парфумер: Джон-Пол Велтон.</p>
-                  <p>Верхня нота: Мандарин – Грейпфрут – Гіркий Апельсин</p>
-                  <p>Середні ноти: Зелене Чайне Листя – Мате</p>
-                  <p>Базові ноти: Атласький Кедр – Сіра Амбра – Ветивер</p>
+                  <p>Верхня нота: Мандарин, Грейпфрут, Гіркий Апельсин</p>
+                  <p>Середні ноти: Зелене Чайне Листя, Мате</p>
+                  <p>Базові ноти: Атласький Кедр, Сіра Амбра, Ветивер</p>
                 </div>
               </div>
             </div>
@@ -211,16 +208,16 @@
                   <h4>WELTON LONDON KEEMUN EAU DE PARFUM</h4>
                   <p>
                     Цей парфум зберігає елегантну східну глибину від початку до
-                    кінця, де анісова насиченість мирри відкриває аромат свіжим
+                    кінця, де анісова насиченість мірри відкриває аромат свіжим
                     бергамотом і димним мате. Чорний чай оповитий пудровими
                     нотами ірису, підсиленими ладаном і бальзамічної солодкістю
                     дерева гуаяк. Ці елегантні димчасті обертові ноти
                     зосереджені на тлі, де перемішуються ром і какао.
                   </p>
                   <p>Парфумер: Джон-Пол Велтон.</p>
-                  <p>Верхня нота: Мате – Мирро – Бергамот</p>
-                  <p>Середні ноти: Ірис – Чорний Чай – Ладан – Дерево Гуаяк</p>
-                  <p>Базові ноти: Мускус – Ром – Какао</p>
+                  <p>Верхня нота: Мате, Мірра, Бергамот</p>
+                  <p>Середні ноти: Ірис, Чорний Чай, Ладан, Дерево Гуаяк</p>
+                  <p>Базові ноти: Мускус, Ром, Какао</p>
                 </div>
               </div>
             </div>
@@ -249,15 +246,13 @@
                   </p>
                   <p>Парфумер: Джон-Пол Велтон.</p>
                   <p>
-                    Верхня нота: бергамот – малина – рожевий перець – гіркий
-                    апельсин
+                    Верхня нота: Бергамот, Малина, Рожевий Перець , Гіркий Апельсин
                   </p>
                   <p>
-                    Середні ноти:чай – абсолют марокканської троянди – жасмин
-                    самбак
+                    Середні ноти: Чай, Абсолют Марокканської Троянди, Жасмін Самбак
                   </p>
                   <p>
-                    Базові ноти: олія ірису – мускус – боби тонка – білий кедр
+                    Базові ноти: Олія Ірису, Мускус, Боби Тонка, Білий кедр
                   </p>
                 </div>
               </div>
@@ -287,9 +282,9 @@
                     смаку.
                   </p>
                   <p>Парфумер: Джон-Пол Велтон.</p>
-                  <p>Верхня нота: Кашемірове Дерево – Лимон – Кардамон</p>
-                  <p>Середні ноти:Біла Артемізія – Шавлія</p>
-                  <p>Базові ноти: Кедр – Амбра – Пачулі – Сіра – Боби Тонка</p>
+                  <p>Верхня нота: Кашемірове Дерево, Лимон, Кардамон</p>
+                  <p>Середні ноти: Біла Артемізія, Шавлія</p>
+                  <p>Базові ноти: Кедр, Амбра, Пачулі, Сіра, Боби Тонка</p>
                 </div>
               </div>
             </div>
@@ -316,11 +311,10 @@
                     таємничий шлейф.
                   </p>
                   <p>Парфумер: Джон-Пол Велтон.</p>
-                  <p>Верхня нота: троянда – марокканська троянда</p>
-                  <p>Середні ноти:білий жасмин</p>
+                  <p>Верхня нота: Троянда, Марокканська Троянда</p>
+                  <p>Середні ноти: Білий Жасмін</p>
                   <p>
-                    Базові ноти: амбра – сандалове дерево Майсур – білий мускус
-                    – ваніль
+                    Базові ноти: Амбра, Сандалове дерево Майсур, Білий Мускус, Ваніль
                   </p>
                 </div>
               </div>
@@ -350,9 +344,9 @@
                     сонячної витонченості.
                   </p>
                   <p>Парфумер: Джон-Пол Велтон.</p>
-                  <p>Верхня нота: жасмин – неролі – квітка цистусу</p>
-                  <p>Середні ноти:Біла Лілія – Давана – Марокканська Троянда</p>
-                  <p>Базові ноти: Мускус – Сандал – Пачулі</p>
+                  <p>Верхня нота: Жасмін, Неролі, Квітка Цистусу</p>
+                  <p>Середні ноти: Біла Лілія, Давана, Марокканська Троянда</p>
+                  <p>Базові ноти: Мускус, Сандал Пачулі</p>
                 </div>
               </div>
             </div>
@@ -382,16 +376,14 @@
                   </p>
                   <p>Парфумер: Джон-Пол Велтон.</p>
                   <p>
-                    Верхня нота: Таїфська Троянда — Чорний Перець — Квітка
+                    Верхня нота: Таїфська Троянда, Чорний Перець, Квітка
                     Чорної Смородини
                   </p>
                   <p>
-                    Середні ноти:Трояндова Вода — Абсолют Марокканської Троянди
-                    — Абсолют Апельсинового Цвіту
+                    Середні ноти: Трояндова Вода, Абсолют Марокканської Троянди, Абсолют Апельсинового Цвіту
                   </p>
                   <p>
-                    Базові ноти: Опопонакс — Лабданум — Геліотроп — Ветивер —
-                    Дерево Гуаяк — Кедр — Папірус
+                    Базові ноти: Опопонакс, Лабданум, Геліотроп, Ветивер, Дерево Гуаяк, Кедр, Папірус
                   </p>
                 </div>
               </div>
@@ -420,11 +412,10 @@
                     Сходу минулих часів із відтінком сучасності, просто чарівно!
                   </p>
                   <p>Парфумер: Джон-Пол Велтон.</p>
-                  <p>Верхня нота: Тютюн – Імбир – Кардамон</p>
-                  <p>Середні ноти:Уд – Кедр – Шафран – Рожевий Перець</p>
+                  <p>Верхня нота: Тютюн, Імбир, Кардамон</p>
+                  <p>Середні ноти: Уд, Кедр, Шафран, Рожевий Перець</p>
                   <p>
-                    Базові ноти:Чорний Мускус – Сіра Амбра – Лабданум –
-                    Сандалове Дерево
+                    Базові ноти: Чорний Мускус, Сіра Амбра, Лабданум, Сандалове Дерево
                   </p>
                 </div>
               </div>
