add index button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     ></script>
   </head>
   <body>
-    <div class="for_page">
+    <!-- <div class="for_page">
       <header class="header">
         <div class="container">
           <div class="row">
@@ -45,7 +45,7 @@
             </div>
           </div>
         </div>
-      </header>
+      </header> -->
 
       <main class="main">
         <div class="first_block">
@@ -64,6 +64,16 @@
                   </p>
                   <p class="author">О.Маріо</p>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="block_brands">
+          <div class="container">
+            <div class="row">
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <button class="button_brands" type="button" onclick="window.location.href ='brands.html';"> Бренди</button>
               </div>
             </div>
           </div>
