--- a/brands/shauran.html
+++ b/brands/shauran.html
@@ -34,12 +34,27 @@
         </div>
       </header>
       <main class="main">
+        <section class="block_banner">
+          <div class="container">
+            <div class="row">
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <div class="picture">
+                  <img src="../img/shauran/about.svg" />
+                </div>
+              </div>
+              <!-- <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+               <p> Ексклюзивна колекція унікальних і поетичних парфумів, які чуттєво передають відображення східних культур у західному мистецтві та торкаються душі...</p>
+               <p>Усі парфуми розроблені майстрами-парфумерами шляхом змішування дорогоцінних інгредієнтів.</p>
+              </div> -->
+            </div>
+          </div>
+        </section>
         <section class="block">
           <div class="container">
             <div class="row">
               <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                 <div class="picture">
-                  <img src="../img/shauran/baroque.jpg" />
+                  <img src="../img/shauran/baroque_back_new.webp" />
                 </div>
               </div>
               <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
@@ -66,7 +81,7 @@
               <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                   <div class="picture">
-                    <img src="../img/shauran/capella.jpg" />
+                    <img src="../img/shauran/capella_back.webp" />
                   </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
@@ -94,7 +109,7 @@
               <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                   <div class="picture">
-                    <img src="../img/shauran/cuir_dose.jpg" />
+                    <img src="../img/shauran/cuir-dose_back.webp" />
                   </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
@@ -122,7 +137,7 @@
               <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                   <div class="picture">
-                    <img src="../img/shauran/dynasty.jpg" />
+                    <img src="../img/shauran/dynasty_back.webp" />
                   </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
@@ -151,7 +166,7 @@
               <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                   <div class="picture">
-                    <img src="../img/shauran/eclepse.jpg" />
+                    <img src="../img/shauran/eclipse_back.webp" />
                   </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
@@ -179,7 +194,7 @@
               <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                   <div class="picture">
-                    <img src="../img/shauran/escapade.jpg" />
+                    <img src="../img/shauran/escapade_back.webp" />
                   </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
@@ -205,7 +220,7 @@
               <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                   <div class="picture">
-                    <img src="../img/shauran/mesopotamia.jpg" />
+                    <img src="../img/shauran/mesopotamia_back.webp" />
                   </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
@@ -229,7 +244,7 @@
               <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                   <div class="picture">
-                    <img src="../img/shauran/patchouli_vision.jpg" />
+                    <img src="../img/shauran/patchoulivision_back.webp" />
                   </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
@@ -254,7 +269,7 @@
               <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                   <div class="picture">
-                    <img src="../img/shauran/renaissence.jpg" />
+                    <img src="../img/shauran/renaissance_back.webp" />
                   </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
@@ -279,7 +294,7 @@
               <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                   <div class="picture">
-                    <img src="../img/shauran/erverie.jpg" />
+                    <img src="../img/shauran/reverie_back.webp" />
                   </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
