--- a/brands.html
+++ b/brands.html
@@ -59,20 +59,20 @@
           </div>
           </div>
 
-          <!-- <div class="container">
+          <div class="container">
             <div class="row">
-              <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+              <!-- <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                 <a href="brands/alysonoldoini.html"
                   ><img src="img/alysonoldoini/alysonoldoini_logo.png" alt=""
                 /></a>
-              </div>
+              </div> -->
               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                 <a href="brands/robert_piguet.html"
                   ><img src="img/robert_piguet/piguet_logo.jpg" alt=""
                 /></a>
               </div>
           </div>
-          </div> -->
+          </div>
         </div>
       </main>
     </div>
