--- a/brands/somens.html
+++ b/brands/somens.html
@@ -5,22 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../brands_css/somens.css" />
-    <link rel="stylesheet" href="../brands_css/shauran_responsive.css">
+    <link rel="stylesheet" href="../brands_css/shauran_responsive.css" />
     <link
       rel="stylesheet"
       type="text/css"
       href="../vendor/bootstrap-4.6.2-dist/css/bootstrap.min.css"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <script type="text/javascript" src="../js/jquery-v3.6.1.mini.js"></script>
     <script type="text/javascript" src="../js/custom.js"></script>
     <script
       type="text/javascript"
       src="../vendor/bootstrap-4.6.2-dist/js/bootstrap.min.js"
     ></script>
-    <title>SHAURAN</title>
+    <title>SOMENS</title>
   </head>
   <body>
     <div class="for_page">
@@ -46,15 +49,13 @@
                 <div class="discription">
                   <h4>SOMENS ARIA</h4>
                   <p>
-                    Відкрите серце та розум у поєднанні з вишуканим запахом — це мистецтво зв’язувати культури за допомогою ароматів.
+                    Відкрите серце та розум у поєднанні з вишуканим запахом — це
+                    мистецтво зв’язувати культури за допомогою ароматів.
                   </p>
                   <p>Парфумер: Chris Maurice.</p>
                   <p>Верхні ноти: Лимон, Бергамот та Гранат</p>
-                  <p>Cередні ноти: Чай, Жасмін та Інжир​
-                  </p>
-                  <p>
-                    Базові ноти: Кедр, Мускус та Ветивер​
-                  </p>
+                  <p>Cередні ноти: Чай, Жасмін та Інжир​</p>
+                  <p>Базові ноти: Кедр, Мускус та Ветивер​</p>
                 </div>
               </div>
             </div>
@@ -62,145 +63,153 @@
         </section>
 
         <section class="block">
-            <div class="container">
-              <div class="row">
-                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                  <div class="picture">
-                    <img src="../img/somens/jade.jpg" />
-                  </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="picture">
+                  <img src="../img/somens/jade.jpg" />
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                  <div class="discription">
-                    <h4>SOMENS JADE</h4>
-                    <p>
-                      Лукас любить створювати свої парфуми як з натуральної сировини, так і з синтетичної. Починаючи від індонезійської есенції пачулі, яка привносить чуттєвий відтінок какао та викликає звикання, до композицій таких як ця.
-                    </p>
-                    <p>Парфумер: Lucas Sieuzac.</p>
-                    <p>Верхні ноти: Фруктові ноти та Квіткові ноти​</p>
-                    <p>Середні ноти: Бергамот та Гарденія​
-                    </p>
-                    <p>
-                        Базові ноти: Кедр та Сандал​
-                    </p>
-                  </div>
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="discription">
+                  <h4>SOMENS JADE</h4>
+                  <p>
+                    Лукас любить створювати свої парфуми як з натуральної
+                    сировини, так і з синтетичної. Починаючи від індонезійської
+                    есенції пачулі, яка привносить чуттєвий відтінок какао та
+                    викликає звикання, до композицій таких як ця.
+                  </p>
+                  <p>Парфумер: Lucas Sieuzac.</p>
+                  <p>Верхні ноти: Фруктові ноти та Квіткові ноти​</p>
+                  <p>Середні ноти: Бергамот та Гарденія​</p>
+                  <p>Базові ноти: Кедр та Сандал​</p>
                 </div>
               </div>
             </div>
-          </section>
+          </div>
+        </section>
 
-          <section class="block">
-            <div class="container">
-              <div class="row">
-                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                  <div class="picture">
-                    <img src="../img/somens/arena.jpg" />
-                  </div>
+        <section class="block">
+          <div class="container">
+            <div class="row">
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="picture">
+                  <img src="../img/somens/arena.jpg" />
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                  <div class="discription">
-                    <h4>SOMENS ARENA</h4>
-                    <p>
-                      Arena - це парфуми, які представляють походження всіх парфумів, які еволюціонували в духи сьогодення.<br> Arena - це пережиток перших парфумів в арабському світі, які були створені з елегантними та вишуканими арабськими та класичними нотами.
-                    </p>
-                    <p>Парфумер: Chris Maurice.</p>
-                    <p>Верхні ноти: Кардамон, Роза та Артемізія​​</p>
-                    <p>Середні ноти: Червоні фрукти, Шавлія, Нагармота, Ірис та Амбра​
-                    </p>
-                    <p>
-                        Базові ноти: Уд, Деревні ноти, Ваніль та Мускус​
-                    </p>
-                  </div>
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="discription">
+                  <h4>SOMENS ARENA</h4>
+                  <p>
+                    Arena - це парфуми, які представляють походження всіх
+                    парфумів, які еволюціонували в духи сьогодення.<br />
+                    Arena - це пережиток перших парфумів в арабському світі, які
+                    були створені з елегантними та вишуканими арабськими та
+                    класичними нотами.
+                  </p>
+                  <p>Парфумер: Chris Maurice.</p>
+                  <p>Верхні ноти: Кардамон, Роза та Артемізія​​</p>
+                  <p>
+                    Середні ноти: Червоні фрукти, Шавлія, Нагармота, Ірис та
+                    Амбра​
+                  </p>
+                  <p>Базові ноти: Уд, Деревні ноти, Ваніль та Мускус​</p>
                 </div>
               </div>
             </div>
-          </section>
+          </div>
+        </section>
 
-          <section class="block">
-            <div class="container">
-              <div class="row">
-                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                  <div class="picture">
-                    <img src="../img/somens/seda.jpg" />
-                  </div>
+        <section class="block">
+          <div class="container">
+            <div class="row">
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="picture">
+                  <img src="../img/somens/seda.jpg" />
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                  <div class="discription">
-                    <h4>SOMENS SEDA</h4>
-                    <p>
-                      Seda - це парфуми, які починаються з історії культур Індійського океану і закінчуються в головних містах Європи з дуже вишуканим свіжим відтінком.
-                    </p>
-                    <p>Парфумер: Daniel Josier.</p>
-                    <p>Верхні ноти: Цитруси, Гальбанум та Мандарин​​​</p>
-                    <p>Середні ноти: Жасмин та Аґрус
-                    </p>
-                    <p>
-                        Базові ноти: Мускус та Кедр
-                    </p>
-                  </div>
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="discription">
+                  <h4>SOMENS SEDA</h4>
+                  <p>
+                    Seda - це парфуми, які починаються з історії культур
+                    Індійського океану і закінчуються в головних містах Європи з
+                    дуже вишуканим свіжим відтінком.
+                  </p>
+                  <p>Парфумер: Daniel Josier.</p>
+                  <p>Верхні ноти: Цитруси, Гальбанум та Мандарин​​​</p>
+                  <p>Середні ноти: Жасмин та Аґрус</p>
+                  <p>Базові ноти: Мускус та Кедр</p>
                 </div>
               </div>
             </div>
-          </section>
+          </div>
+        </section>
 
-          <section class="block">
-            <div class="container">
-              <div class="row">
-                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                  <div class="picture">
-                    <img src="../img/somens/onice.jpg" />
-                  </div>
+        <section class="block">
+          <div class="container">
+            <div class="row">
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="picture">
+                  <img src="../img/somens/onice.jpg" />
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                  <div class="discription">
-                    <h4>SOMENS ONICE</h4>
-                    <p>
-                      Onice — це парфуми, які спускаються з крижаних гір, це аромат з цього дивовижного фону.
-Він відображає життя вдома, а також регіони життя на відкритому повітрі у дуже віддалених районах. Він приносить найновіші враження відомі людині.
-Від Патагонії до Арктики, Onice вловлює та повертає це відчуття всім тим, кому ще належить відчути справжнє відчуття найсвіжіших місць на землі.
-                    </p>
-                    <p>Парфумер: Lucas Sieuzac.</p>
-                    <p>Верхні ноти: Апельсин, М'ята та Чорний перець​​​​</p>
-                    <p>Середні ноти: Кашемірове дерево та Елемі ​
-                    </p>
-                    <p>
-                        Базові ноти: Мускус та Кедр
-                    </p>
-                  </div>
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="discription">
+                  <h4>SOMENS ONICE</h4>
+                  <p>
+                    Onice — це парфуми, які спускаються з крижаних гір, це
+                    аромат з цього дивовижного фону. Він відображає життя вдома,
+                    а також регіони життя на відкритому повітрі у дуже
+                    віддалених районах. Він приносить найновіші враження відомі
+                    людині. Від Патагонії до Арктики, Onice вловлює та повертає
+                    це відчуття всім тим, кому ще належить відчути справжнє
+                    відчуття найсвіжіших місць на землі.
+                  </p>
+                  <p>Парфумер: Lucas Sieuzac.</p>
+                  <p>Верхні ноти: Апельсин, М'ята та Чорний перець​​​​</p>
+                  <p>Середні ноти: Кашемірове дерево та Елемі ​</p>
+                  <p>Базові ноти: Мускус та Кедр</p>
                 </div>
               </div>
             </div>
-          </section>
+          </div>
+        </section>
 
-          <section class="block">
-            <div class="container">
-              <div class="row">
-                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                  <div class="picture">
-                    <img src="../img/somens/capriccio.jpg" />
-                  </div>
+        <section class="block">
+          <div class="container">
+            <div class="row">
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="picture">
+                  <img src="../img/somens/capriccio.jpg" />
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                  <div class="discription">
-                    <h4>SOMENS CAPRICCIO</h4>
-                    <p>
-                      Capriccio, як каже італійське слово, це миттєва насолода, коли твоє бажання збувається.
-Capriccio уособлює тропіки, тепло сонячних днів, свіжість фруктів і елегантний морський бриз.<br>
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="discription">
+                  <h4>SOMENS CAPRICCIO</h4>
+                  <p>
+                    Capriccio, як каже італійське слово, це миттєва насолода,
+                    коли твоє бажання збувається. Capriccio уособлює тропіки,
+                    тепло сонячних днів, свіжість фруктів і елегантний морський
+                    бриз.<br />
 
-Capriccio — це серце і душа, поєднання толерантності та радості в Маямі, коли спогади про тропіки вітаються аватаром нової землі.<br>
-                    
-                    Capriccio - ідеальне поєднання солодкості, елегантності, свіжості та привабливості.
-                    </p>
-                    <p>Парфумер: Chris Maurice.</p>
-                    <p>Верхні ноти: Ананас, Бергамот та Чорниця​​</p>
-                    <p>Середні ноти: Жасмин
-                    </p>
-                    <p>
-                        Базові ноти: Береза, Шафран, Мускус та Пачулі​
-                    </p>
-                  </div>
+                    Capriccio — це серце і душа, поєднання толерантності та
+                    радості в Маямі, коли спогади про тропіки вітаються аватаром
+                    нової землі.<br />
+
+                    Capriccio - ідеальне поєднання солодкості, елегантності,
+                    свіжості та привабливості.
+                  </p>
+                  <p>Парфумер: Chris Maurice.</p>
+                  <p>Верхні ноти: Ананас, Бергамот та Чорниця​​</p>
+                  <p>Середні ноти: Жасмин</p>
+                  <p>Базові ноти: Береза, Шафран, Мускус та Пачулі​</p>
                 </div>
               </div>
             </div>
-          </section>
-        </main>
-    </div></body>
+          </div>
+        </section>
+      </main>
+    </div>
+  </body>
+</html>
