--- a/brands.html
+++ b/brands.html
@@ -71,6 +71,11 @@
                   ><img src="img/robert_piguet/piguet_logo.jpg" alt=""
                 /></a>
               </div>
+              <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+                <a href="brands/l_t_piver.html"
+                  ><img src="img/l_t_piver/logo.jpg" alt=""
+                /></a>
+              </div>
           </div>
           </div>
         </div>
