--- a/brands.html
+++ b/brands.html
@@ -61,11 +61,11 @@
 
           <div class="container">
             <div class="row">
-              <!-- <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
-                <a href="brands/alysonoldoini.html"
-                  ><img src="img/alysonoldoini/alysonoldoini_logo.png" alt=""
+              <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+                <a href="brands/milano_fregranze.html"
+                  ><img src="img/milano_fragranze/logo.jpg" alt=""
                 /></a>
-              </div> -->
+              </div>
               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                 <a href="brands/robert_piguet.html"
                   ><img src="img/robert_piguet/piguet_logo.jpg" alt=""
