--- a/brands.html
+++ b/brands.html
@@ -78,6 +78,16 @@
               </div>
           </div>
           </div>
+
+          <div class="container">
+            <div class="row">
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <a href="brands/carthusia.html"
+                  ><img src="img/carthusia/logo.jpg" alt=""
+                /></a>
+              </div>
+            </div>
+          </div>
         </div>
       </main>
     </div>
