--- a/brands/carthusia.html
+++ b/brands/carthusia.html
@@ -265,7 +265,7 @@ Gelsomini di Capri - це аромат, який захоплює почуття
                     <h4>Carthusia Io Capri</h4>
                     <p>
                         Io Capri Carthusia - це парфум для жінок та чоловіків, він належить до групи фужерні. Io Capri випущений у 2000 році.
-                        Присвячений богині, на честь якої імператор Тіберій побудував одну з найважливіших імператорських вілл на Капрі. "Io" - це динамічний і рішучий меланж, витончений і сучасний, який поєднує солодкі тони дикого фігового дерева з веселими, стимулюючими. чайного листя.
+                        Присвячений богині, на честь якої імператор Тіберій побудував одну з найважливіших імператорських вілл на Капрі. "Io" - це динамічний і рішучий меланж, витончений і сучасний, який поєднує солодкі тони дикого фігового дерева з чайним листям.
                     </p>
                     <p>Верхні ноти: М'ята, Сицилійський лимон, Евкаліпт, Зірчастий аніс, Бразильський апельсин та Літцея кубеба</p>
                     <p>Cередні ноти: Інжир, Чай, Лемонграсс, Польові квіти, Яблуневий колір та Єгипетський жасмін
